--- a/src/main/webapp/home.css
+++ b/src/main/webapp/home.css
@@ -1,22 +1,29 @@
+* {
+    box-sizing: border-box;
+    --blue-theme: #4A66AC;
+}
+
 body {
     margin: 0;
-    background: url(images/plane_background.jpg);
+    background: url(images/plane_back2.png) no-repeat;
     background-size: cover;
 }
 
 /* Header*/
-header {
-    border-bottom: 4px solid #4A66AC;
+main.homepage {
+    height: calc(100vh - 85px);
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 85px;
 }
+
 #flymee_logo {
     font-family: 'Bodoni MT', Arial, serif;
     font-weight: bold;
-    color: #4A66AC;
+    color: var(--blue-theme);
     display: flex;
+    align-items: center;
     flex-direction: row;
 }
 #flymee_logo img {
@@ -24,37 +31,55 @@ header {
 }
 
 /* Navigation */
-nav ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-evenly;
+.navbar-nav {
     font-family: 'Trebuchet MS', Arial, serif;
 }
-nav li {
-    padding: 0 7px;
+
+.nav-item {
+    padding: 0 10px;
+    text-align: right;
 }
-nav a {
-    font-size: 1.3em;
-    color: white;
-    text-decoration: none;
-    background-color: rgb(98, 158, 213);
-    padding: 2px 8px;
-    border: outset;
+
+.navbar-collapse {
+    flex-grow: unset;
 }
-nav a:hover {
-    border-color: rgb(98, 158, 213);
+.nav-link {
+    font-size: 1.5em;
+    color: var(--blue-theme)!important;
+    padding: 2px 8px;  
+}
+
+.nav-link:hover {
+    color: #c5ddff!important;
     cursor: pointer;
+}
+.nav-link.active {
+    color: #072247!important;
 }
 
 /* Main */
 #title_and_input {
     background-color: rgba(62, 75, 87, 0.7);
-    margin: 10% 20% 10% 20%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     box-shadow: 5px 5px 7px #000000;
+}
+
+.icon_font1 {
+    font-size: 1.5em;
+    display: block;
+    padding-right: 10px;
+    padding-left: 10px;
+    border-left: 2px solid #ced4da;
+}
+
+.icon_font2 {
+    font-size: 1.5em;
+    display: block;
+    padding-right: 10px;
+    padding-left: 12px;
+    border-left: 2px solid #ced4da;
 }
 
 #title_and_input h1 {
@@ -62,17 +87,12 @@ nav a:hover {
     font-family: 'Bodoni MT', Arial, serif;
     font-weight: normal;
     color: white;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
-
-.little_image {
-    height: 30px;
-    width: 30px;
-}
-
 .input_style {
     display: flex;
-    border : 4px #4A66AC solid;
-    background-color: whitesmoke;
+    align-items: center;
 }
 
 #date_bar {
@@ -80,7 +100,11 @@ nav a:hover {
     margin-bottom: 26.8px;
 }
 
-input[type="search"] {
-    width: 200px;
-    height: 35px;
+
+.btn-primary {
+    color: #fff;
+    background-color: var(--blue-theme);
+    border-color: var(--blue-theme);
+    font-size: 1.3rem;
+    margin-bottom: 20px;
 }
