--- a/src/main/webapp/home.css
+++ b/src/main/webapp/home.css
@@ -1,15 +1,4 @@
-* {
-    box-sizing: border-box;
-    --blue-theme: #4A66AC;
-}
-
-body {
-    margin: 0;
-    background: url(images/plane_back2.png) no-repeat;
-    background-size: cover;
-}
-
-/* Header*/
+/* Main */
 main.homepage {
     height: calc(100vh - 85px);
     display: flex;
@@ -18,46 +7,6 @@ main.homepage {
     margin-top: 85px;
 }
 
-#flymee_logo {
-    font-family: 'Bodoni MT', Arial, serif;
-    font-weight: bold;
-    color: var(--blue-theme);
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-}
-#flymee_logo img {
-    height: 70px;
-}
-
-/* Navigation */
-.navbar-nav {
-    font-family: 'Trebuchet MS', Arial, serif;
-}
-
-.nav-item {
-    padding: 0 10px;
-    text-align: right;
-}
-
-.navbar-collapse {
-    flex-grow: unset;
-}
-.nav-link {
-    font-size: 1.5em;
-    color: var(--blue-theme)!important;
-    padding: 2px 8px;  
-}
-
-.nav-link:hover {
-    color: #c5ddff!important;
-    cursor: pointer;
-}
-.nav-link.active {
-    color: #072247!important;
-}
-
-/* Main */
 #title_and_input {
     background-color: rgba(62, 75, 87, 0.7);
     display: flex;
@@ -68,6 +17,7 @@ main.homepage {
 
 .icon_font1 {
     font-size: 1.5em;
+    color: rgb(159, 172, 184);
     display: block;
     padding-right: 10px;
     padding-left: 10px;
@@ -76,6 +26,7 @@ main.homepage {
 
 .icon_font2 {
     font-size: 1.5em;
+    color:rgb(159, 172, 184);
     display: block;
     padding-right: 10px;
     padding-left: 12px;
