--- a/src/main/webapp/login.css
+++ b/src/main/webapp/login.css
@@ -1,16 +1,4 @@
 
-* {
-    box-sizing: border-box;
-    --blue-theme: #4A66AC;
-}
-
-body {
-    margin: 0;
-    background: url(images/plane_back2.png) no-repeat;
-    background-size: cover;
-}
-
-/* Header*/
 main.homepage {
     height: calc(100vh - 85px);
     display: flex;
@@ -19,58 +7,201 @@ main.homepage {
     margin-top: 85px;
 }
 
-#flymee_logo {
+*:focus {
+    outline: none;
+} 
+
+.title {
     font-family: 'Bodoni MT', Arial, serif;
-    font-weight: bold;
     color: var(--blue-theme);
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 32px;
     display: flex;
-    align-items: center;
-    flex-direction: row;
-}
-#flymee_logo img {
-    height: 70px;
+    text-align: left;
 }
 
-/* Navigation */
-.navbar-nav {
-    font-family: 'Trebuchet MS', Arial, serif;
+.login-link {
+color: var(--blue-theme);
+display: inline-block;
+font-weight: 400;
+text-decoration: none;
 }
 
-.nav-item {
-    padding: 0 10px;
-    text-align: right;
+.login-link:hover {
+    text-decoration: underline;
 }
 
-.navbar-collapse {
-    flex-grow: unset;
-}
-.nav-link {
-    font-size: 1.5em;
-    color: var(--blue-theme)!important;
-    padding: 2px 8px;  
+.login-link:focus {
+    text-decoration: underline;
 }
 
-.nav-link:hover {
-    color: #c5ddff!important;
-    cursor: pointer;
-}
-.nav-link.active {
-    color: #072247!important;
-}
-
-/* Main */
-#title_and_input {
-    background-color: rgba(41, 36, 58, 0.856);
+#account {
     display: flex;
-    height: auto;
-    width: auto;
-    border-radius: 10px;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 5px 5px 7px #000000;
-
+    justify-content: center;
 }
 
-h2{
-    color: whitesmoke;
+@media all and (max-width: 375px) {
+    #account {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
+
+.account-p {
+    margin-bottom: 0px;
+    margin-right: 6px;
+}
+
+/*Structure*/
+.wrapper {
+display: flex;
+align-items: center;
+flex-direction: column; 
+justify-content: center;
+width: 100%;
+min-height: 100%;
+padding: 20px;
+}
+
+#formContent {
+border-radius: 10px 10px 10px 10px;
+background: #fff;
+padding: 30px;
+width: 90%;
+max-width: 450px;
+padding: 0px;
+-webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+text-align: center;
+}
+
+#formFooter {
+background-color: #f6f6f6;
+border-top: 1px solid #dce8f1;
+padding: 25px;
+text-align: center;
+-webkit-border-radius: 0 0 10px 10px;
+border-radius: 0 0 10px 10px;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: var(--blue-theme);
+    border-color: var(--blue-theme);
+    font-size: 1.3rem;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 150px;
+}
+
+
+input[type="email"], input[type="password"] {
+    background-color: #f6f6f6;
+    border: none;
+    color: #0d0d0d;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px;
+    width: 85%;
+    border: 2px solid #f6f6f6;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+}
+
+input[type="email"]:focus, input[type="password"]:focus {
+background-color: #fff;
+border-bottom: 2px solid var(--blue-theme);
+}
+
+input[type="email"]:placeholder, input[type="password"]:placeholder {
+color: #cccccc;
+}
+
+
+/* Animations */
+
+/* Simple CSS3 Fade-in-down Animation */
+.fadeInDown {
+-webkit-animation-name: fadeInDown;
+animation-name: fadeInDown;
+-webkit-animation-duration: 1s;
+animation-duration: 1s;
+-webkit-animation-fill-mode: both;
+animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeInDown {
+0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+}
+100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+}
+}
+
+@keyframes fadeInDown {
+0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+}
+100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+}
+}
+
+/* Simple CSS3 Fade-in Animation */
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+.fadeIn {
+opacity:0;
+-webkit-animation:fadeIn ease-in 1;
+-moz-animation:fadeIn ease-in 1;
+animation:fadeIn ease-in 1;
+
+-webkit-animation-fill-mode:forwards;
+-moz-animation-fill-mode:forwards;
+animation-fill-mode:forwards;
+
+-webkit-animation-duration:1s;
+-moz-animation-duration:1s;
+animation-duration:1s;
+}
+
+.fadeIn.first {
+-webkit-animation-delay: 0.4s;
+-moz-animation-delay: 0.4s;
+animation-delay: 0.4s;
+}
+
+.fadeIn.second {
+-webkit-animation-delay: 0.6s;
+-moz-animation-delay: 0.6s;
+animation-delay: 0.6s;
+}
+
+.fadeIn.third {
+-webkit-animation-delay: 0.8s;
+-moz-animation-delay: 0.8s;
+animation-delay: 0.8s;
+}
+
+.fadeIn.fourth {
+-webkit-animation-delay: 1s;
+-moz-animation-delay: 1s;
+animation-delay: 1s;
+}
+
