--- a/src/main/webapp/login.css
+++ b/src/main/webapp/login.css
@@ -1,5 +1,5 @@
 
-main.homepage {
+main.center {
     height: calc(100vh - 85px);
     display: flex;
     flex-direction: column;
@@ -56,34 +56,34 @@ text-decoration: none;
 
 /*Structure*/
 .wrapper {
-display: flex;
-align-items: center;
-flex-direction: column; 
-justify-content: center;
-width: 100%;
-min-height: 100%;
-padding: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column; 
+    justify-content: center;
+    width: 100%;
+    min-height: 100%;
+    padding: 20px;
 }
 
 #formContent {
-border-radius: 10px 10px 10px 10px;
-background: #fff;
-padding: 30px;
-width: 90%;
-max-width: 450px;
-padding: 0px;
--webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-text-align: center;
+    border-radius: 10px 10px 10px 10px;
+    background: #fff;
+    padding: 30px;
+    width: 90%;
+    max-width: 450px;
+    padding: 0px;
+    -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+    box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+    text-align: center;
 }
 
 #formFooter {
-background-color: #f6f6f6;
-border-top: 1px solid #dce8f1;
-padding: 25px;
-text-align: center;
--webkit-border-radius: 0 0 10px 10px;
-border-radius: 0 0 10px 10px;
+    background-color: #f6f6f6;
+    border-top: 1px solid #dce8f1;
+    padding: 25px;
+    text-align: center;
+    -webkit-border-radius: 0 0 10px 10px;
+    border-radius: 0 0 10px 10px;
 }
 
 .btn-primary {
