--- a/src/main/webapp/home.css
+++ b/src/main/webapp/home.css
@@ -1,8 +1,3 @@
-*{
-    box-sizing: border-box;
-    --blue-theme: #4A66AC;
-}
-
 /* Main */
 main.homepage {
     height: calc(100vh - 85px);
@@ -12,6 +7,15 @@ main.homepage {
     margin-top: 85px;
 }
 
+.titleResult{
+    font-size: 2.5em;
+    font-family: 'Bodoni MT', Arial, serif;
+    font-weight: normal;
+    color: white;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 #title_and_input {
     background-color: rgba(62, 75, 87, 0.7);
     display: flex;
@@ -19,6 +23,7 @@ main.homepage {
     align-items: center;
     box-shadow: 5px 5px 7px #000000;
 }
+
 
 .icon_font1 {
     font-size: 1.5em;
@@ -46,6 +51,9 @@ main.homepage {
     margin-top: 30px;
     margin-bottom: 30px;
 }
+
+
+
 .input_style {
     display: flex;
     align-items: center;
@@ -67,7 +75,8 @@ main.homepage {
 
 .checkbox{
     font-size: 30px;
-    color: white;
+    color:black;
+    font-family: 'Bodoni MT', Arial, serif;
 }
 
 h2{
@@ -84,3 +93,4 @@ input[type=checkbox]
   transform: scale(2);
   padding: 10px;
 }
+
